@@ -16,7 +16,8 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 criação das variáveis: MEMTEST86V9 e MEMTEST86V4 para suportar as novas versões do Memtest86 mantida pela empresa que
 adquiriu o Memtest86 PassMark. Alteração do arquivo de configuração: dhcpd.conf com a linha para mudar o escopo padrão
 para configurar o DNS Server apontando para o servidor Ubuntu Server. Alteração do arquivo de configuração do serviço
-do VSFTPd: vsftpd.allowed_users alterado os usuários do GLPI9 e GLPI10. 
+do VSFTPd: vsftpd.allowed_users alterado os usuários do GLPI9 e GLPI10. Criação do script: 17-B-glpi-10.sh, alteração 
+do nome do script: 18-A-fusioninventory-9.sh pois foi lançado o suporte para o GLPI 10.
 
 20/08/2022 - Robson Vaamonde - Criação do arquivo de configuração: grafana.ini, alteração do script: 21-grafana.sh com
 suporte para copiar o arquivo de configuração customizado do grafana.ini e editar o arquivo. Preparativos para a criação
